--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #ee1515;
+    background-color: #192935;
 }
 
 header img {
@@ -60,7 +60,7 @@ article.pokemon {
 
 .fire-element {
     background-color: red;
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .water {
@@ -69,7 +69,7 @@ article.pokemon {
 
 .water-element {
     background-color: blue;
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .grass {
@@ -78,7 +78,7 @@ article.pokemon {
 
 .grass-element {
     background-color: rgba(0, 128, 0, 0.658);
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .poison {
@@ -87,7 +87,7 @@ article.pokemon {
 
 .poison-element {
     background: #a848d4d0;
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .normal {
@@ -96,12 +96,12 @@ article.pokemon {
 
 .normal-element {
     background: rgb(222, 103, 48);
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .flying-element {
     background: rgb(48, 170, 222);
-    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
 .bug {
@@ -110,6 +110,106 @@ article.pokemon {
 
 .bug-element {
     background: #c3c3c3;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.rock {
+    background: #5e5e5e;
+}
+
+.rock-element {
+    background: #4e4e4e;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.ground {
+    background: #635858;
+}
+
+.ground-element {
+    background: #423939;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.fighting {
+    background: #67887b;
+}
+
+.fighting-element {
+    background: #516d62;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.psychic {
+    background: rgb(194, 25, 194);
+}
+
+.psychic-element {
+    background: rgb(155, 20, 155);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.ice {
+    background: rgb(86, 153, 207);
+}
+
+.ice-element {
+    background: rgb(68, 126, 173);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.electric {
+    background: rgb(233, 210, 0);
+}
+
+.electric-element {
+    background: rgb(206, 202, 2);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.ghost {
+    background: rgb(117, 33, 117);
+}
+
+.ghost-element {
+    background: rgb(99, 32, 99);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.dragon {
+    background: #9e9e9e;
+}
+
+.dragon-element {
+    background: #b1b1b1;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.fairy {
+    background: violet;
+}
+
+.fairy-element {
+    background: rgb(253, 153, 253);
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+
+}
+
+.dark {
+    background: #000;
+}
+
+.dark-element {
+    background: #111;
+    box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
+}
+
+.steel {
+    background: #777;
+}
+
+.steel-element {
+    background: #999;
     box-shadow: 4px 6px 14px 0px rgb(0, 0, 0, 0.2);
 }
 
@@ -125,6 +225,7 @@ div.element {
     place-items: center;
     border-radius: 5px;
     color: #fff;
+    font-weight: bolder;
     padding: 0.5rem;
     margin: .2rem;
 }
@@ -144,6 +245,68 @@ div.element {
     width: 80%;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(2px);
+    background: #11111157;
+}
+
+.wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.pokeball {
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    border: 3px solid;
+    animation: frames .8s linear 0s infinite;
+}
+
+.pokeball:after {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 30px;
+    background-color: red;
+    border-bottom: 4px solid;
+    top: -4px
+}
+
+.pokeball:before {
+    content: '';
+    position: absolute;
+    background-color: #fff;
+    width: 10px;
+    height: 10px;
+    border: 4px solid;
+    border-radius: 50%;
+    bottom: 18px;
+    right: 18px;
+    z-index: 1;
+}
+
+/* AnimationFrames */
+@keyframes frames {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media (max-width: 1000px) {
     article.pokemon {
         flex-wrap: wrap;
@@ -152,5 +315,22 @@ div.element {
 
     div.element-content {
         justify-content: center;
+    }
+}
+
+@media (max-width: 560px) {
+    header img {
+        width: 30vh;
+    }
+
+    main {
+        width: 90%;
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    main {
+        padding: .5rem;
     }
 }
